wrp-1160 fixe on search overflow, saved list, notification icons, general icons, double lining, rearranged create new button

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -33,6 +33,7 @@ body {
   width: 100%;
   height: 100%;
 }
+html{ height: 100%;}
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
